--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ],
   "functions": {
     "api/anthropic.js": {
       "memory": 1024,
@@ -6,3 +9,27 @@
     }
   }
 }
+```
+
+This tells Vercel:
+- Serve `index.html` as the main page
+- Route `/api/*` requests to the API functions
+
+Then your API will be available at:
+```
+https://boba-scanner.vercel.app/api/anthropic
+```
+
+### Option B: Separate Repos (Cleaner Architecture)
+
+Create two separate repos:
+1. `BOBA-Scanner` (frontend only) → GitHub Pages
+2. `BOBA-Scanner-API` (backend only) → Vercel
+
+---
+
+## 🎯 Quick Test: Is Your API Working?
+
+Try visiting this URL:
+```
+https://boba-scanner.vercel.app/api/anthropic
