--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "functions": {
     "api/anthropic.js": {
-      "memory": 512,
       "maxDuration": 30
     },
     "api/config.js": {
-      "memory": 128,
       "maxDuration": 5
     }
   },
@@ -13,8 +11,7 @@
     {
       "source": "/card-database.json",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=86400, stale-while-revalidate=3600" },
-        { "key": "Content-Encoding", "value": "gzip" }
+        { "key": "Cache-Control", "value": "public, max-age=86400, stale-while-revalidate=3600" }
       ]
     },
     {
@@ -38,8 +35,5 @@
         { "key": "X-XSS-Protection", "value": "1; mode=block" }
       ]
     }
-  ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
   ]
 }
